<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context="com.example.billbook.MainActivity">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/amount"
    android:textSize="20sp" />
<EditText
android:id="@+id/etCount"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:hint="@string/etCount"
android:importantForAutofill="no"
android:inputType="number" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/type"
    android:textSize="20sp" />
<RadioGroup
    android:id="@+id/radioGroup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/radioOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expenditure" />
    <RadioButton
        android:id="@+id/radioIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income" />
</RadioGroup>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/Description"
    android:textSize="20sp" />
<EditText
    android:id="@+id/etDescribe"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

android:hint="@string/etDescrip"
android:importantForAutofill="no"
android:inputType="none" />
<Button
    android:id="@+id/btnAdd"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/add" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/overview"
    android:textSize="20sp" />
<TextView
    android:id="@+id/tvInfo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/tvInfo"
    android:textSize="20sp" />
    <ListView
        android:id="@+id/listView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip">

    </ListView>

</LinearLayout>